2003-06-04  David Hyatt  <hyatt@apple.com>

	Fix for 3273300, leaks in cssyyparse.  Function forgot to delete
	its args value list when destroyed.
	
        Reviewed by gramps

        * khtml/css/cssparser.h:

2003-06-03  David Hyatt  <hyatt@apple.com>

	Fix for 3259647, crash when printing a table page.  This is fixed
	on the KDE KHTML trunk.  The loop shouldn't be broken out of
	when you have column elements so that all sections can recalc
	their cell grids as needed.
	
        Reviewed by kocienda

        * khtml/rendering/render_table.cpp:
        (RenderTable::recalcSections):

=== Safari-82 ===

2003-06-03  Richard Williamson   <rjw@apple.com>

	Fixed 3275565.  Ref count the decoder.

        Reviewed by Ken.

        * khtml/khtml_part.cpp:
        (KHTMLPart::clear):
        * khtml/misc/decoder.cpp:
        (Decoder::Decoder):
        (Decoder::~Decoder):
        * khtml/misc/decoder.h:
        * khtml/xml/dom_docimpl.cpp:
        (DocumentImpl::~DocumentImpl):
        * khtml/xml/dom_docimpl.h:
	

2003-06-02  David Hyatt  <hyatt@apple.com>

	Fix for 3276099.  value() was wrong for radio buttons.  Needed
	to get it from the attribute since I was no longer caching
	anything in m_value.
	
        Reviewed by kocienda

        * khtml/html/html_formimpl.cpp:
        (HTMLInputElementImpl::value):

2003-06-02  Ken Kocienda  <kocienda@apple.com>

        Code written by darin
        Reviewed by me

	Fix for this bug:

	<rdar://problem/3272162>: repro crash in khtml::CachedImage::checkNotify() on particular page

        * khtml/ecma/kjs_html.cpp:
        (Image::putValue): ref onLoadListener when setting a value to onLoad
        (Image::~Image): deref onLoadListener when destructing the image.

2003-06-02  David Hyatt  <hyatt@apple.com>

	Fix for 3263679, color: # doesn't parse.  Fix is to add an
	error-handling case for # by itself to parser.y.
	
        Reviewed by gramps/ken

        * khtml/css/parser.cpp:
        * khtml/css/parser.y:
