@@ -1,3 +1,15 @@
+2003-06-04  John Sullivan  <sullivan@apple.com>
+
+	- fixed 3279957 -- REGRESSION: assertion failure at launch in 
+	Decoder::~Decoder() importing bookmarks
+
+	Richard actually wrote this fix.
+        Reviewed by me, Darin
+
+        * kwq/WebCoreEncodings.mm:
+        (+[WebCoreEncodings decodeData:]):
+	don't use stack-based decoder; use new instead. 
+
 2003-06-04  David Hyatt  <hyatt@apple.com>
 
 	Fix for 3273300, leaks in cssyyparse.  Function forgot to delete
